package bnet.protocol.attribute;
import "bnet/entity.proto";


message Variant {
	optional bool bool_value = 2;
	optional int64 int_value = 3;
	optional double float_value = 4;
	optional string string_value = 5;
	optional bytes blob_value = 6;
	optional bytes message_value = 7;
	optional string fourcc_value = 8;
	optional uint64 uint_value = 9;
	optional EntityId entityid_value = 10;
}

message Attribute {
	required string name = 1;
	required Variant value = 2;
}

message AttributeFilter {
	enum Operation {
		MATCH_NONE = 0;
		MATCH_ANY = 1;
		MATCH_ALL = 2;
		MATCH_ALL_MOST_SPECIFIC = 3;
	}

	required Operation op = 1;
	repeated Attribute attribute = 2;
}
